# ZEUS_Tango_control

./: .gitignore  README.md  local_commands  note  pyproject.toml  requirements.txt  taurus_form.py  to_do.txt
Basler/: GUI.py  balser_client.py  basler.py  basler_client_GUI.py  basler_register.py  basler_server.py  client_alignment.py  example_code.py  menu.py  server.py  test.py
DAQ/: GUI.py  README.html  README.md  config.json  config.py  constants.py  daq.py  daq_basler_um_ta2_2024.py  init.json  laser.py  list.json  markdown_to_html.py  procedures.md  scan_table.csv  scannable_attributes.txt  ta1.py  ta2.py  tango_version_daq_basler_um_ta2_2024.py  test.py  test_acquisition.py  test_code.py  tmp.py  tmp1.py
DG/: GUI.py  dg535_menu.py  dg535_server.py  dg645_menu.py  dg645_server.py  menu.py
ESP301/: GUI.py  menu.py  server.py  test1.py
FileReader/: GUI.py  file_reader_server.py  menu.py
GX_regulator/: GUI.py  menu.py  scan_table.csv  server.py
General_device/: clock.py
Gentec/: Taurus_GUI.py  example_code.py  gentec_GUI.py  gentec_menu.py  gentec_power_meter_client_GUI.py  gentec_power_meter_server.py  gentec_server.py  instructions.md  menu.py  server.py  tkinter_GUI.py
Labview/: GUI.py  menu.py  server.py
LaserWarningSign/: GUI.py  example_code.py  menu.py  server.py
LeCroy_oscilloscope/: Taurus_GUI.py  menu.py  scope.py  server.py
NewPortXPS/: GUI.py  XPS_C8_drivers.py  menu.py  server.py
Owis/: GUI.py  README.html  attribute_config.json  menu.py  ps90func.chm  readme.md  server.py  test.py  user_defined_locations.csv
Owis/axis_parameter_file/: S41.N29.08BH.V6.owd
PublishBoard/: GUI.py  energy_log.csv  menu.py  server.py
TSP01B/: GUI.py  menu.py  server.py
ThorlabsXA/: GUI.py  menu.py  server.py
Vimba/: GUI.py  menu.py  server.py
common/: GUI.py  GUItest.py  TaurusGUI_Argparse.py  clock.py  config.py  my_motor_widget.py  other.py  shared_server_side.py  start_menu.py  taurus_widget.py
common/log_attributes/: attributes_to_log.json  lab_log.db  lab_log.py
demo/: demo1.py  sync_laser_target.py
register/: device_management.py  device_management_combination_config.py  register_device_server.py  script.py
shortcut/: Taurus_panel.bat
shortcut/Windows/: AlliedVision_Vimba_Manta.bat  Basler.bat  DAQ.bat  Device_management_tool.bat  FileReader_Andor_oscilloscope.bat  GX_regulator.bat  GentecEO.bat  LabviewDevice.bat  LaserWarningSign.bat  Lecroy_scope.bat  NewportESP.bat  NewportXPS.bat  Owis.bat  Thorlabs_KDC101.bat  add_new_device.bat  dg645.bat  set_TANGO_HOST.bat
simulate_device/: power_supply.py
tests/: test_basler.py
